--- a/Les_transparent/python02.tex
+++ b/Les_transparent/python02.tex
@@ -4,8 +4,8 @@
 
 \title[Langage et algorithmique]{Langage et algorithmique}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
-%\date[DLT 2003]{Developments in Language Theory Conference, 2003}
-\date{}
+%\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
+\date{05/04/2015}
 \institute{ENSTA Bretagne}
 
 
