Cours2 finalisé et qcm de test

--- a/Les_transparent/corps/syntaxe.tex
+++ b/Les_transparent/corps/syntaxe.tex
@@ -1418,9 +1418,9 @@ print("Hello World!")
   \end{lstlisting}
 	
 \begin{itemize}
-  \item  Exécution : \emph{Python3 hello.py ou Python3 hello}
+  \item  Exécution : \emph{python3 hello.py ou python3 hello}
   \item Passage de paramètres par l'attribut  \emph{sys.argv}
-  \item Ex : \emph{Python3 hello 1234 xyz}
+  \item Ex : \emph{python3 hello 1234 xyz}
     \begin{itemize}
 		\item sys.argv[0] $\leftarrow$ hello
     \item sys.argv[1] $\leftarrow$ 1234
